--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serendip-web",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -27,6 +27,7 @@
     "figlet": "^1.2.1",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.0.12",
+    "html-minifier": "^3.5.21",
     "localtunnel": "^1.9.1",
     "moment": "^2.23.0",
     "moment-jalaali": "^0.8.3",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/handlebars": "^4.0.40",
+    "@types/html-minifier": "^3.5.2",
     "@types/node": "^10.12.18",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
