--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serendip-web",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -40,6 +40,7 @@
     "@types/handlebars": "^4.0.40",
     "@types/html-minifier": "^3.5.2",
     "@types/node": "^10.12.18",
+    "@types/ws": "^6.0.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-mocha": "^6.0.0",
