--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serendip-web",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -26,6 +26,7 @@
     "clear": "^0.1.0",
     "figlet": "^1.2.1",
     "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
     "handlebars": "^4.0.12",
     "html-minifier": "^3.5.21",
     "localtunnel": "^1.9.1",
@@ -37,6 +38,7 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/handlebars": "^4.0.40",
     "@types/html-minifier": "^3.5.2",
     "@types/node": "^10.12.18",
