--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serendip-web",
-  "version": "1.0.24",
+  "version": "1.1.1",
   "description": "It's a lightweight web server for creating websites using handlebars and javascript.",
   "main": "index.js",
   "bin": {
@@ -33,8 +33,9 @@
     "moment": "^2.23.0",
     "moment-jalaali": "^0.8.3",
     "request": "^2.88.0",
-    "serendip": "^1.0.29",
-    "serendip-utility": "^1.0.2",
+    "serendip": "^1.1.8",
+    "serendip-business-client": "^1.0.2",
+    "serendip-utility": "^1.1.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
