--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "argv": "0.0.2",
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
+    "dotenv": "^6.2.0",
     "figlet": "^1.2.1",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
